--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,12 +38,15 @@ dependencies {
 
     def activity_version = "1.7.0"
     def lifecycle_version = "2.6.1"
+    def recyclerview_version = "1.3.0"
 
     implementation 'androidx.core:core-ktx:1.10.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.12.1'
+
+    implementation "androidx.recyclerview:recyclerview:$recyclerview_version"
 
     implementation "androidx.activity:activity-ktx:$activity_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
